--- a/src/CollectSFDataGui/Server/CollectSFDataGui.Server.csproj
+++ b/src/CollectSFDataGui/Server/CollectSFDataGui.Server.csproj
@@ -5,8 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.4" />
+    <None Remove="Pages\_Host.cshtml-bak" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Pages\_Host.cshtml-bak" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.6" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
