--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -6,8 +6,11 @@ on: [pull_request_target]
 
 jobs:
   label:
+    permissions:
+      contents: read
+      pull-requests: write
     runs-on: windows-latest
     steps:
-      - uses: actions/labeler@v2
+      - uses: actions/labeler@v5
         with:
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
