modify git actions create release -> softprops/action-gh-release@v1

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,11 +20,6 @@ on:
       - master
       - main
 
-permissions:
-  contents: read
-  packages: write
-  actions: write
-  
 jobs:
   build:
     runs-on: windows-latest
@@ -134,16 +129,28 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      # - name: create release
+      #   id: create_release
+      #   uses: actions/create-release@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     tag_name: ${{ steps.prepare_release_asset.outputs.file_version }}
+      #     release_name: ${{ env.project_name }}
+      #     draft: false
+      #     prerelease: ${{ contains(github.event.pull_request.labels.*.name, 'Pre-release') }}
+      # https://github.com/marketplace/actions/gh-release
       - name: create release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
+          files: ${{ env.release_path }}\${{ env.project_name }}.zip
           tag_name: ${{ steps.prepare_release_asset.outputs.file_version }}
-          release_name: ${{ env.project_name }}
+          name: ${{ env.project_name }}
           draft: false
+          token: ${{ secrets.GITHUB_TOKEN }}
           prerelease: ${{ contains(github.event.pull_request.labels.*.name, 'Pre-release') }}
+          generate_release_notes: true
 
       - name: upload release asset
         id: upload-release-asset
