--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,9 +2,9 @@ name: CI CollectSFData
 
 env:
   project_name: CollectSFData
-  project_root: .\src
-  artifacts_path: .\src\bin\artifacts
-  release_path: .\src\bin\Release
+  project_root: $(GITHUB_WORKSPACE)\src
+  artifacts_path: $(project_root)\bin\artifacts
+  release_path: $(project_root)\bin\Release
   release_config: .\configurationFiles\collectsfdata.options.json
   target_version: net48
   github_owner: ${{ github.event.repository.owner.name }}
@@ -63,9 +63,11 @@ jobs:
         shell: powershell
         run: |
           [environment]::GetEnvironmentVariables()
-          dir
+          write-host "copy "$($env:release_path)" "$($env:artifacts_path)" -recurse -force"
           copy "$($env:release_path)" "$($env:artifacts_path)" -recurse -force
+          write-host "copy "$($env:release_config)" "$($env:artifacts_path)" -recurse -force"
           copy "$($env:release_config)" "$($env:artifacts_path)" -recurse -force
+          write-host (dir "$($env:artifacts_path)" -recurse)
 
       - name: artifacts output
         shell: powershell
@@ -111,6 +113,8 @@ jobs:
           $nugetPackageName = (get-item "$($env:release_path)\*.nupkg").Name
           echo "nuget_package=$nugetPackage" >> $env:GITHUB_OUTPUT
           echo "nuget_package_name=$nugetPackageName" >> $env:GITHUB_OUTPUT
+          write-host "nuget_package=$nugetPackage"
+          write-host "nuget_package_name=$nugetPackageName"
 
       - name: prepare release asset
         shell: powershell
@@ -122,10 +126,12 @@ jobs:
           copy "$($releaseFramework)\*.exe" "$($env:release_path)_upload"
           copy "$($releaseFramework)\*.dll" "$($env:release_path)_upload"
           copy "$($releaseFramework)\*.json" "$($env:release_path)_upload"
+          write-host "compress-archive -path "$($env:release_path)_upload\*" -destinationPath "$($env:release_path)\$($env:project_name).zip" -force"
           compress-archive -path "$($env:release_path)_upload\*" -destinationPath "$($env:release_path)\$($env:project_name).zip" -force
           $fileVersion = [io.fileinfo]::new("$($releaseFramework)\$($env:project_name).exe").VersionInfo.FileVersion
           echo "::log-command parameter1=$fileVersion::fileVersion"
           echo "file_version=v$fileVersion" >> $env:GITHUB_OUTPUT
+          write-host (dir $releaseFramework -recurse)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
