--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,9 +2,9 @@ name: CI CollectSFData
 
 env:
   project_name: CollectSFData
-  project_root: ${{github.workspace}}\src
-  artifacts_path: $(project_root)\bin\artifacts
-  release_path: $(project_root)\bin\Release
+  project_root: ${{ github.workspace }}\src
+  artifacts_path: $project_root\bin\artifacts
+  release_path: $project_root\bin\Release
   release_config: .\configurationFiles\collectsfdata.options.json
   target_version: net48
   github_owner: ${{ github.event.repository.owner.name }}
