--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,10 +2,10 @@ name: CI CollectSFData
 
 env:
   project_name: CollectSFData
-  project_root: ${{ github.workspace }}\src
-  artifacts_path: ${{ github.workspace }}\src\bin\artifacts
-  release_path: ${{ github.workspace }}\src\bin\Release
-  release_config: .\configurationFiles\collectsfdata.options.json
+  project_root: '${{ github.workspace }}\src'
+  artifacts_path: '${{ github.workspace }}\src\bin\artifacts'
+  release_path: '${{ github.workspace }}\src\bin\Release'
+  release_config: '.\configurationFiles\collectsfdata.options.json'
   target_version: net48
   github_owner: ${{ github.event.repository.owner.name }}
 
@@ -67,7 +67,6 @@ jobs:
           copy "$($env:release_path)" "$($env:artifacts_path)" -recurse -force
           write-host "copy "$($env:release_config)" "$($env:artifacts_path)" -recurse -force"
           copy "$($env:release_config)" "$($env:artifacts_path)" -recurse -force
-          write-host (dir "$($env:artifacts_path)" -recurse)
 
       - name: artifacts output
         shell: powershell
@@ -131,7 +130,7 @@ jobs:
           $fileVersion = [io.fileinfo]::new("$($releaseFramework)\$($env:project_name).exe").VersionInfo.FileVersion
           echo "::log-command parameter1=$fileVersion::fileVersion"
           echo "file_version=v$fileVersion" >> $env:GITHUB_OUTPUT
-          write-host (dir $releaseFramework -recurse)
+          dir $releaseFramework -recurse
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
