--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -119,18 +119,22 @@ jobs:
         shell: powershell
         id: prepare_release_asset
         run: |
-          md "$($env:release_path)_upload"
+          $release_upload = "$($env:release_path.trim())_upload"
+          md $release_upload
           $releaseFramework = "$($env:release_path)\$($env:target_version)"
-          copy "$($releaseFramework)\*.config" "$($env:release_path)_upload"
-          copy "$($releaseFramework)\*.exe" "$($env:release_path)_upload"
-          copy "$($releaseFramework)\*.dll" "$($env:release_path)_upload"
-          copy "$($releaseFramework)\*.json" "$($env:release_path)_upload"
-          write-host "compress-archive -path "$($env:release_path)_upload\*" -destinationPath "$($env:release_path)\$($env:project_name).zip" -force"
-          compress-archive -path "$($env:release_path)_upload\*" -destinationPath "$($env:release_path)\$($env:project_name).zip" -force
+          copy "$($releaseFramework)\*.config" $release_upload
+          copy "$($releaseFramework)\*.exe" $release_upload
+          copy "$($releaseFramework)\*.dll" $release_upload
+          copy "$($releaseFramework)\*.json" $release_upload
+          write-host "compress-archive -path "$($release_upload)\*" -destinationPath "$($release_upload)\$($env:project_name).zip" -force"
+          compress-archive -path "$($env:release_path)_upload\*" -destinationPath "$($release_upload)\$($env:project_name).zip" -force
           $fileVersion = [io.fileinfo]::new("$($releaseFramework)\$($env:project_name).exe").VersionInfo.FileVersion
           echo "::log-command parameter1=$fileVersion::fileVersion"
           echo "file_version=v$fileVersion" >> $env:GITHUB_OUTPUT
+          write-host "dir $releaseFramework -recurse"
           dir $releaseFramework -recurse
+          write-host "dir $release_upload -recurse"
+          dir $release_upload -recurse
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
