--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -127,7 +127,7 @@ jobs:
           copy "$($releaseFramework)\*.dll" $release_upload
           copy "$($releaseFramework)\*.json" $release_upload
           write-host "compress-archive -path "$($release_upload)\*" -destinationPath "$($release_upload)\$($env:project_name).zip" -force"
-          compress-archive -path "$($env:release_path)_upload\*" -destinationPath "$($release_upload)\$($env:project_name).zip" -force
+          compress-archive -path "$($release_upload)\*" -destinationPath "$($release_upload)\$($env:project_name).zip" -force
           $fileVersion = [io.fileinfo]::new("$($releaseFramework)\$($env:project_name).exe").VersionInfo.FileVersion
           echo "::log-command parameter1=$fileVersion::fileVersion"
           echo "file_version=v$fileVersion" >> $env:GITHUB_OUTPUT
