--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -119,15 +119,15 @@ jobs:
         shell: powershell
         id: prepare_release_asset
         run: |
-          $release_upload = "$($env:release_path.trim())Upload"
+          $release_upload = "$($env:release_path.trim())Upload".trim()
           md $release_upload
           $releaseFramework = "$($env:release_path)\$($env:target_version)"
           copy "$($releaseFramework)\*.config" $release_upload
           copy "$($releaseFramework)\*.exe" $release_upload
           copy "$($releaseFramework)\*.dll" $release_upload
           copy "$($releaseFramework)\*.json" $release_upload
-          write-host "compress-archive -path "$($release_upload)\*" -destinationPath "$($release_upload)\$($env:project_name).zip" -force"
-          compress-archive -path "$($release_upload)\*" -destinationPath "$($release_upload)\$($env:project_name).zip" -force
+          write-host "compress-archive -path "$($release_upload.trim())\*" -destinationPath "$($release_upload)\$($env:project_name).zip" -force"
+          compress-archive -path "$($release_upload.trim())\*" -destinationPath "$($release_upload)\$($env:project_name).zip" -force
           $fileVersion = [io.fileinfo]::new("$($releaseFramework)\$($env:project_name).exe").VersionInfo.FileVersion
           echo "::log-command parameter1=$fileVersion::fileVersion"
           echo "file_version=v$fileVersion" >> $env:GITHUB_OUTPUT
