--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -142,50 +142,50 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.prepare_release_asset.outputs.file_version }}
-          release_name: ${{ env.project_name }}
-          draft: false
-          prerelease: ${{ contains(github.event.pull_request.labels.*.name, 'Pre-release') }}
-
-      # https://github.com/marketplace/actions/gh-release
       # - name: create release
       #   id: create_release
-      #   uses: softprops/action-gh-release@v1
+      #   uses: actions/create-release@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #   with:
-      #     files: |
-      #       **/${{ env.project_name }}.zip
-      #       **/*${{ env.project_name }}*.nupkg
       #     tag_name: ${{ steps.prepare_release_asset.outputs.file_version }}
-      #     name: ${{ env.project_name }}
+      #     release_name: ${{ env.project_name }}
       #     draft: false
-      #     token: ${{ secrets.GITHUB_TOKEN }}
       #     prerelease: ${{ contains(github.event.pull_request.labels.*.name, 'Pre-release') }}
-      #     generate_release_notes: true
 
-      - name: upload release asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # https://github.com/marketplace/actions/gh-release
+      - name: create release
+        id: create_release
+        uses: softprops/action-gh-release@v2
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ env.release_path }}\${{ env.project_name }}.zip
-          asset_name: ${{ env.project_name }}.zip
-          asset_content_type: application/zip
+          files: |
+            **/${{ env.project_name }}.zip
+            **/*${{ env.project_name }}*.nupkg
+          tag_name: ${{ steps.prepare_release_asset.outputs.file_version }}
+          name: ${{ env.project_name }}
+          draft: false
+          token: ${{ secrets.GITHUB_TOKEN }}
+          prerelease: ${{ contains(github.event.pull_request.labels.*.name, 'Pre-release') }}
+          generate_release_notes: true
 
-      - name: upload nuget release asset
-        id: upload-nuget-release-asset
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ steps.set_nuget_package.outputs.nuget_package }}
-          asset_name: ${{ steps.set_nuget_package.outputs.nuget_package_name }}
-          asset_content_type: application/zip
+      # - name: upload release asset
+      #   id: upload-release-asset
+      #   uses: actions/upload-release-asset@v1.0.1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: ${{ env.release_path }}\${{ env.project_name }}.zip
+      #     asset_name: ${{ env.project_name }}.zip
+      #     asset_content_type: application/zip
+
+      # - name: upload nuget release asset
+      #   id: upload-nuget-release-asset
+      #   uses: actions/upload-release-asset@v1.0.1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: ${{ steps.set_nuget_package.outputs.nuget_package }}
+      #     asset_name: ${{ steps.set_nuget_package.outputs.nuget_package_name }}
+      #     asset_content_type: application/zip
