--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,10 +2,10 @@ name: CI CollectSFData
 
 env:
   project_name: CollectSFData
-  project_root: "${{ github.workspace }}\\src"
-  artifacts_path: "${{ github.workspace }}\\src\\bin\\artifacts"
-  release_path: "${{ github.workspace }}\\src\\bin\\Release"
-  release_config: ".\\configurationFiles\\collectsfdata.options.json"
+  project_root: ${{ github.workspace }}\\src
+  artifacts_path: ${{ github.workspace }}\\src\\bin\\artifacts
+  release_path: ${{ github.workspace }}\\src\\bin\\Release
+  release_config: .\\configurationFiles\\collectsfdata.options.json
   target_version: net48
   github_owner: ${{ github.event.repository.owner.name }}
 
@@ -119,15 +119,15 @@ jobs:
         shell: powershell
         id: prepare_release_asset
         run: |
-          $release_upload = "$($env:release_path.trim())Upload".trim()
+          $release_upload = "$($env:release_path.trim())Upload"
           md $release_upload
           $releaseFramework = "$($env:release_path)\$($env:target_version)"
           copy "$($releaseFramework)\*.config" $release_upload
           copy "$($releaseFramework)\*.exe" $release_upload
           copy "$($releaseFramework)\*.dll" $release_upload
           copy "$($releaseFramework)\*.json" $release_upload
-          $source = "$($release_upload.trim())\\*".replace(' ', '')
-          $destination = "$($env:release_path.trim())\\$($env:project_name).zip".replace(' ', '')
+          $source = "$($release_upload.trim())\\*"
+          $destination = "$($env:release_path.trim())\\$($env:project_name).zip"
           write-host "compress-archive -path $source -destinationPath $destination -force"
           compress-archive -path $source -destinationPath $destination -force
           $fileVersion = [io.fileinfo]::new("$($releaseFramework)\$($env:project_name).exe").VersionInfo.FileVersion
@@ -141,17 +141,6 @@ jobs:
           dir $env:release_path.trim() -recurse
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # - name: create release
-      #   id: create_release
-      #   uses: actions/create-release@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     tag_name: ${{ steps.prepare_release_asset.outputs.file_version }}
-      #     release_name: ${{ env.project_name }}
-      #     draft: false
-      #     prerelease: ${{ contains(github.event.pull_request.labels.*.name, 'Pre-release') }}
 
       # https://github.com/marketplace/actions/gh-release
       - name: create release
@@ -167,25 +156,3 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           prerelease: ${{ contains(github.event.pull_request.labels.*.name, 'Pre-release') }}
           generate_release_notes: true
-
-      # - name: upload release asset
-      #   id: upload-release-asset
-      #   uses: actions/upload-release-asset@v1.0.1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-      #     asset_path: ${{ env.release_path }}\${{ env.project_name }}.zip
-      #     asset_name: ${{ env.project_name }}.zip
-      #     asset_content_type: application/zip
-
-      # - name: upload nuget release asset
-      #   id: upload-nuget-release-asset
-      #   uses: actions/upload-release-asset@v1.0.1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-      #     asset_path: ${{ steps.set_nuget_package.outputs.nuget_package }}
-      #     asset_name: ${{ steps.set_nuget_package.outputs.nuget_package_name }}
-      #     asset_content_type: application/zip
