--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,8 +5,7 @@ env:
   project_root: ${{ github.workspace }}\\src
   artifacts_path: ${{ github.workspace }}\\src\\bin\\artifacts
   release_path: ${{ github.workspace }}\\src\\bin\\Release
-  release_config: .\\configurationFiles\\collectsfdata.options.json
-  target_version: net48
+  release_config: ${{ github.workspace }}\\configurationFiles\\collectsfdata.options.json
   github_owner: ${{ github.event.repository.owner.name }}
 
 on:
@@ -67,6 +66,7 @@ jobs:
           copy "$($env:release_path)" "$($env:artifacts_path)" -recurse -force
           write-host "copy "$($env:release_config)" "$($env:artifacts_path)" -recurse -force"
           copy "$($env:release_config)" "$($env:artifacts_path)" -recurse -force
+          dir "$($env:artifacts_path)" -recurse
 
       - name: artifacts output
         shell: powershell
@@ -85,7 +85,7 @@ jobs:
     permissions:
       contents: write
       packages: write
-      #actions: write
+
     steps:
       - name: checkout
         uses: actions/checkout@v1
@@ -119,26 +119,15 @@ jobs:
         shell: powershell
         id: prepare_release_asset
         run: |
-          $release_upload = "$($env:release_path.trim())Upload"
-          md $release_upload
-          $releaseFramework = "$($env:release_path)\$($env:target_version)"
-          copy "$($releaseFramework)\*.config" $release_upload
-          copy "$($releaseFramework)\*.exe" $release_upload
-          copy "$($releaseFramework)\*.dll" $release_upload
-          copy "$($releaseFramework)\*.json" $release_upload
-          $source = "$($release_upload.trim())\\*"
-          $destination = "$($env:release_path.trim())\\$($env:project_name).zip"
+          $source = "$($env:release_path)\\*"
+          $destination = "$($env:release_path)\\$($env:project_name).zip"
           write-host "compress-archive -path $source -destinationPath $destination -force"
           compress-archive -path $source -destinationPath $destination -force
           $fileVersion = [io.fileinfo]::new("$($releaseFramework)\$($env:project_name).exe").VersionInfo.FileVersion
           echo "::log-command parameter1=$fileVersion::fileVersion"
           echo "file_version=v$fileVersion" >> $env:GITHUB_OUTPUT
-          write-host "dir $releaseFramework -recurse"
-          dir $releaseFramework -recurse
-          write-host "dir $release_upload -recurse"
-          dir $release_upload -recurse
           write-host "dir $env:release_path -recurse"
-          dir $env:release_path.trim() -recurse
+          dir $env:release_path -recurse
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
